Cancel + History Reservation

--- a/assets/grocery_crud/themes/flexigrid/css/flexigrid.css
+++ b/assets/grocery_crud/themes/flexigrid/css/flexigrid.css
@@ -693,6 +693,19 @@ div.pGroup {
 	margin-left:5px;
 	display: block;
 }
+.flexigrid .cancel-icon
+{
+	background:url(images/reject.png) no-repeat;
+	cursor: pointer;
+	width: 16px;
+	height:16px;
+	float:right;
+	border: none !important;
+	padding:0px !important;
+	padding-bottom:0px !important;
+	margin-left:5px;
+	display: block;
+}
 .flexigrid .read-icon
 {
 	background:url(images/magnifier.png) no-repeat center;
